sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:2: error: Missing closing brace `}' assumed here
def cocktailSort2() {var x:Int=getValueCount()-2; var y:Int=0; var test:Boolean=false; var beg:Int=0;; var count:Int=0; var length:Int=getValueCount()
^AlgCocktailSort2:2: error: expected class or object definition
def cocktailSort2() {var x:Int=getValueCount()-2; var y:Int=0; var test:Boolean=false; var beg:Int=0;; var count:Int=0; var length:Int=getValueCount()
^